<resources>
    <string name="app_name">Timer</string>
    <string name="timer_place_holder">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="lap_times">View Lap Times</string>
    <string name="lap_frag_name">Laps:</string>
    <string name="back">Back to Timer</string>
</resources>